test/fail/if_with_nil_return.ly
<@lily method m():nil {} if m():m() @>
